fix: Center menu items when collapsed

--- a/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
+++ b/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
@@ -21,6 +21,7 @@
           padding: 10px $listItemHorizontalPadding 10px $listItemHorizontalPadding
         .list-ico
           margin: 0
+          width: 100%
         .list-name
           display: none
         .list-count
